Добавлены тест УЗД на декабрь 2018.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,12 @@
 mednsktest changelog
 ====================
 
+
+Unreleased
+----------
++ Добавлены тест УЗД на декабрь 2018.
+
+
 v0.1.0
 ------
 + Basic functionality.
-
