--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ mednsktest changelog
 Unreleased
 ----------
 + Добавлены тест УЗД на декабрь 2018.
++ Команда 'start' теперь принимает опцию --save.
 + Переход на использование click.
 
 
